Make the width just a tad smaller, to prevent overflowing breadcrumbs. Do not transform style of text in a button.

--- a/app/assets/stylesheets/breadcrumb.scss
+++ b/app/assets/stylesheets/breadcrumb.scss
@@ -14,7 +14,7 @@
 }
 
 .breadcrumb li {
-  width: 26.72%;
+  width: 26.70%;
   text-decoration: none;
   outline: none;
   display: inline-block;
