--- a/app/assets/stylesheets/skeleton.scss
+++ b/app/assets/stylesheets/skeleton.scss
@@ -164,7 +164,6 @@ input[type="button"] {
   line-height: 50px;
   padding: 0 30px;
   letter-spacing: .1rem;
-  text-transform: uppercase;
   white-space: nowrap;
   box-sizing: border-box; }
 .button:hover,
